<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">
    <View
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_rounded_allgrey"
        />
    <ImageView
        android:id="@+id/iv_weather_detail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/cloud_logo"
        android:scaleType="fitXY"
        android:contentDescription="@string/image_weather_this_layout" />
    <TextView
        android:id="@+id/tv_weather_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/app_name"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/country"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/two_dots"
            />
        <TextView
            android:id="@+id/tv_country_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:layout_gravity="start"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/city"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/two_dots"
            />
        <TextView
            android:id="@+id/tv_city_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:layout_gravity="start"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/coordinat"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/two_dots"
            />
        <TextView
            android:id="@+id/tv_coordinat_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="start"
            android:text="@string/code_zip"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/detail_weather"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/two_dots"
            />
        <TextView
            android:id="@+id/tv_detailweather_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:layout_gravity="start"
            />
    </LinearLayout>
</LinearLayout>