<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipe_layout_showweather"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_showweather"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_greeting_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/greeting_user"
            />
        <TextView
            android:id="@+id/tv_temperature_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_greeting_show"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/_12_Celsius"
            android:textSize="60sp"
            />
        <ImageView
            android:id="@+id/iv_weather_now"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/tv_temperature_now"
            app:layout_constraintBottom_toBottomOf="@id/tv_temperature_now"
            app:layout_constraintRight_toLeftOf="@id/tv_temperature_now"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/cloud_logo"
            />
        <TextView
            android:id="@+id/tv_weathercondition_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_temperature_now"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/weather_condition"
            />
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:layout_constraintRight_toLeftOf="@id/tv_location_show"
            app:layout_constraintTop_toTopOf="@id/tv_location_show"
            app:layout_constraintBottom_toBottomOf="@id/tv_location_show"
            android:layout_marginEnd="2dp"
            android:src="@drawable/location"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_location_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_weathercondition_show"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/code_zip"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_detailinfo_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_weathercondition_show"
            app:layout_constraintBottom_toTopOf="@id/rcv_weather_5days"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1"
            android:layout_marginTop="20dp"
            android:translationY="25dp"
            android:text="@string/detail_info"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_weather_5days"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:minHeight="200dp"
            app:layout_constraintStart_toStartOf="@id/layout_forecast"
            app:layout_constraintEnd_toEndOf="@id/layout_forecast"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:nestedScrollingEnabled="false"
            android:background="@drawable/shape_roundedtop_grey"
            />
        <LinearLayout
            android:id="@+id/layout_forecast"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/rcv_weather_5days"
            app:layout_constraintBottom_toBottomOf="@id/rcv_weather_5days"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tv_errorforecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/weather_condition"
                android:visibility="gone"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_errorforecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:backgroundTint="@color/crystal_blue"
                android:textColor="@color/black"
                android:text="@string/refresh_forecast"
                android:visibility="gone"
                />
        </LinearLayout>
        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit_forecast"
            style="@style/SpinKitView.Circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="@id/rcv_weather_5days"
            app:layout_constraintBottom_toBottomOf="@id/rcv_weather_5days"
            app:SpinKit_Color="@color/colorAccent"
            android:visibility="visible"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>